app/src/test/resources/programs/valid/arrays/outsideBoundariesAccess.exe
// it should fail in runtime, not in compilation
foo main() -> Int = {
    let x: [Int] = new [Int] (2);
    x[2] = 7;
    x[2]
}
