app/src/test/resources/programs/invalid/blocks/wrong_type.exe
foo main() -> Int = {
    Int a;
    Int b;
    /**/
    Int m = {
        a>b;
    };
}